# jnidbus

./: .gitignore  .travis.yml  COPYING  README.md  build.gradle  gradle.properties  maven.gradle  pom.xml  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
jnidbus-kotlin/: build.gradle
jnidbus-kotlin/src/test/kotlin/: PendingCallExtensionTest.kt  SuspendingHandlerTest.kt
src/jmh/java/fr/viveris/: SameThreadSignals.java
src/main/: generateJniHeaders.sh
src/main/java/: Main.java  TestCall.java  TestCallListener.java  TestEvent.java  TestHandler.java  TestReturn.java
src/main/jni/: .gitignore  CMakeLists.txt  resources
src/main/jni/src/: Connection.cpp  Context.cpp  EventLoop.cpp  EventLoopHandlers.cpp  Serialization.cpp
src/main/jni/src/headers/: context.h  event_loop_handlers.h  fr_viveris_jnidbus_bindings_bus_Connection.h  fr_viveris_jnidbus_bindings_bus_EventLoop.h  fr_viveris_vizada_jnidbus_bindings_bus_Connection.h  fr_viveris_vizada_jnidbus_bindings_bus_EventLoop.h  serialization.h
src/scripts/: compileJNI.sh
src/test/java/Call/: AsyncCallTest.java  BasicCallTest.java  FailedCallTest.java
src/test/java/Common/: DBusTestCase.java  Listener.java  StringMessage.java
src/test/java/Common/DBusObjects/: ArrayRecursiveObject.java  CollectionArray.java  (+5 more)
src/test/java/Serialization/: ArraySerializationTest.java  PrimitiveTypesSerializationTest.java  RecursiveObjectSerializationTest.java  SignatureParserTest.java
src/test/java/Signal/: BasicSignalTest.java
src/test/java/benchmarks/: SameThreadSignals.java
src/test/resources/: logback.xml
(+199 files in other folders)
